# Classic-Mac-C-Compendium

./: README.md
Books/Macintosh C Programming By Example - 1991/: Chapter 1.md  Chapter 2.md
Source Code/Apprentice - 1994/: Index.txt
Source Code/Apprentice - 1994/Assembly/: DInfo
Source Code/Apprentice - 1994/Assembly/.finf/: CopyBlit  TSMHelper 1.0d1
Source Code/Apprentice - 1994/Brent Burton/: Brent Burton - README
Source Code/Apprentice - 1994/DropShell 1.0a/: DropShell Source Notes
Source Code/Apprentice - 1994/DropShell 1.0a 2/: DInfo  DS 1.0a Notes  DropShell Change History
Source Code/Apprentice - 1994/Jamie McCarthy/: DInfo
Source Code/Apprentice - 1994/Joe Judge/: DInfo
Source Code/Apprentice - 1994/John Calhoun/: DInfo
Source Code/Apprentice - 1994/Ken Long/: DInfo
Source Code/Apprentice - 1994/Mark Pilgrim/: DInfo
Source Code/Apprentice - 1994/Roy Wood/: DInfo
Source Code/Apprentice - 1994/TransSkel/: DInfo
Source Code/Apprentice 3 - 1995/: Easy View Index.etx
Source Code/Apprentice 3 - 1995/Add-Ons/: DInfo
Source Code/Apprentice 3 - 1995/Author aliases/: DInfo
Source Code/Apprentice 3 - 1995/C/Games/Xconq 7.0d37/source/: INSTALL  Imakefile  config.guess  config.host  config.sub  configure  configure.in
Source Code/Apprentice 3 - 1995/C/Games/Xconq 7.0d37/source/.finf/: curses  doc  kernel  lib
Source Code/Apprentice 3 - 1995/C/Games/Xconq 7.0d37/source/config/: ChangeLog  mh-a68bsd  mh-aix  mh-aix386  mh-apollo68  mh-decstation  mh-delta88  mh-dgux  mh-hp300  mh-hpux  mh-irix4  mh-irix5  mh-linux  mh-lynxos  mh-lynxosrs6k  mh-ncr3000  mh-riscos  mh-sco  mh-solaris  mh-sun  mh-sun3  mh-sysv  mh-sysv4  mh-vaxult2
Source Code/Apprentice 3 - 1995/C/Games/Xconq 7.0d37/source/config/.finf/: mh-empty  mh-sysv
Source Code/Apprentice 3 - 1995/C/Games/Xconq 7.0d37/source/curses/: Imakefile  Makefile.in  ccmd.c  ccmd.def  cconq.6  cconq.c  cconq.h  cdraw.c  configure.in
Source Code/Apprentice 3 - 1995/C/Games/Xconq 7.0d37/source/doc/: Imakefile  configure.in  curses-chap.texi  curses.texi  getsyms.sh  glossary.texi  gpl.texi  hacking.texi  kwic.c  mac-chap.texi  play.texi  quickref.texi  syntax.texi  texi2html  x11-chap.texi  x11.texi
Source Code/Apprentice 3 - 1995/C/Games/Xconq 7.0d37/source/kernel/: Imakefile  Makefile.dos  Makefile.in  action.def  actions.c  ai.c  ai.h  bugs.6in  cmd.def  cmdline.6in  cmdline.c  cmdline.h  combat.c  compile.c  config.h  configure.in  conq.h  diagnost.6in  dir.h  dos.c  game.h  generic.c  goal.def  gvar.def  help.c  help.h  history.c  history.def  history.h  imf.c  imf.h  init.c  kerncmp.com  keyword.def  lisp.c  lisp.h  mac.c  misc.6in  misc.h  mknames.c  (+45 more)
Source Code/Apprentice 3 - 1995/C/Games/Xconq 7.0d37/source/kernel/.finf/: Imakefile  actions.c  generic.c  gvar.def  mkroads.c  plan.c  plan.def  skelconq.c  table.def  task.c  ttype.def  unit.h  unix.c  xconqrc  xlink.com
Source Code/Apprentice 3 - 1995/C/Games/Xconq 7.0d37/source/lib/: 1756.g  1757.g  1805.g  aircraft.imf  ancient.imf  cave.g  cherbourg.g  classic.g  cobra.g  colors.imf  configure.in  coral-sea.g  crater-lake.g  dwellings.imf  earth-1deg.g  emblems.imf  empire.g  eur-100km.g  eur-50km.g  fantasy.imf  flags.imf  flattop.g  friedrich.g  galaxy.g  game.dir
Source Code/Apprentice 3 - 1995/C/Games/Xconq 7.0d37/source/lib/.finf/: classic.g
Source Code/Apprentice 3 - 1995/PowerPlant/: DInfo
Source Code/Apprentice 3 - 1995/Think Class Libraries/: DInfo
(+28898 files in other folders)
