# This file is a shell script fragment that supplies the information# necessary to tailor a template configure script into the configure# script appropriate for this directory.  For more information, check# any existing configure script.srctrigger=xconq.texisrcname="doc"# per-host:host_makefile_frag=`${srcdir}/../config.host ${host} ..`# per-target:# post-target: